--- a/gabia/idc/hosting.html
+++ b/gabia/idc/hosting.html
@@ -233,28 +233,26 @@
                               </div>
                         </section>
                         <!--  idc-ad  -->
-                        <section id="idc-info">
+                        <section id="info2">
                               <div class="container">
-                                    <div class="idc-info">
+                                    <div class="info2">
                                           <h3>서버호스팅에 대해 무엇이든 물어보세요.</h3>
-                                          <p><a href="#">상담하기</a></p>
-                                          <div class="ii-left">
-                                                <div class="ii-left-circle">
+                                          <a href="#" class="info-btn" title="새창">상담하기</a>
+                                          <div class="info-box">
+                                                <div class="in-left">
                                                       <h4>전문 영업<br>상담문의</h4>
+                                                      <ul>
+                                                            <li><em>영업 문의</em><span>02-3473-3911</span></li>
+                                                            <li><em>위탁 운영 지원 문의</em><span>02-6948-3776</span></li>
+                                                      </ul>
                                                 </div>
-                                                <ul>
-                                                      <li><em>영업 문의</em><span>02-3473-3911</span></li>
-                                                      <li><em>위탁 운영 지원 문의</em><span>02-6948-3776</span></li>
-                                                </ul>
-                                          </div>
-                                          <div class="ii-right">
-                                                <div class="ii-right-circle">
+                                                <div class="in-right">
                                                       <h4>24시간<br>기술/장애<br>지원 문의</h4>
+                                                      <ul>
+                                                            <li><em>서초 센터</em><span>02-3473-3901</span></li>
+                                                            <li><em>가산 센터</em><span>02-867-9901</span></li>
+                                                      </ul>
                                                 </div>
-                                                <ul>
-                                                      <li><em>서초 센터</em><span>02-3473-3901</span></li>
-                                                      <li><em>가산 센터</em><span>02-867-9901</span></li>
-                                                </ul>
                                           </div>
                                     </div>
                               </div>
