--- a/gabia/idc/hosting.html
+++ b/gabia/idc/hosting.html
@@ -242,15 +242,15 @@
                                                 <div class="in-left">
                                                       <h4>전문 영업<br>상담문의</h4>
                                                       <ul>
-                                                            <li><em>영업 문의</em><span>02-3473-3911</span></li>
-                                                            <li><em>위탁 운영 지원 문의</em><span>02-6948-3776</span></li>
+                                                            <li><em>영업 문의</em><strong>02-3473-3911</strong></li>
+                                                            <li><em>위탁 운영 지원 문의</em><strong>02-6948-3776</strong></li>
                                                       </ul>
                                                 </div>
                                                 <div class="in-right">
                                                       <h4>24시간<br>기술/장애<br>지원 문의</h4>
                                                       <ul>
-                                                            <li><em>서초 센터</em><span>02-3473-3901</span></li>
-                                                            <li><em>가산 센터</em><span>02-867-9901</span></li>
+                                                            <li><em>서초 센터</em><strong>02-3473-3901</strong></li>
+                                                            <li><em>가산 센터</em><strong>02-867-9901</strong></li>
                                                       </ul>
                                                 </div>
                                           </div>
