--- a/gabia/idc/hosting.html
+++ b/gabia/idc/hosting.html
@@ -345,8 +345,7 @@
                         <section id="qna">
                               <div class="container">
                                     <div class="qna">
-                                          <h3>자주 묻는 질문과 답변입니다</h3>
-                                          <p>전체 보기</p>
+                                          <h3>자주 묻는 질문과 답변입니다  <em>전체 보기</em></h3>
                                           <ul>
                                                 <li><a href="#"><span>Q</span>웹호스팅과 서버호스팅 중 어느 것을 이용해야 하나요?</a></li>
                                                 <li><a href="#"><span>Q</span>서버를 신청하려고 합니다. 절차가 어떻게 되나요?</a></li>
